--- a/acad.html
+++ b/acad.html
@@ -85,7 +85,7 @@
     </div>
 
 
-    <div class = "footer">Copyright 2023, Owen Johnson.</div>
+    <div class = "footer">Copyright 2023, Owen Johnson. <a href="https://www.linkedin.com/in/owen-hl-johnson/">LinkedIn</a></div>
 
   </body>
 </html>
