--- a/acad.html
+++ b/acad.html
@@ -25,14 +25,16 @@
 						<p>Major: Mechanical Engineering</p>
 						<p>Minor: Computer Science</p>
 						<p>Certificate: Collaborative Leadership</p>
-						<p>GPA: 3.68</p>
+						<p>GPA: 3.70</p>
 						<p>Study abroad: Berlin (Summer 2022)</p>
 					</div>
           <div class = "card">
             <h4>TA Experience:</h4>
 						
-						<p>I’m a teaching assistant for Purdue Honors Engineering. Responsibilities have included helping in class, grading and mentoring teams, and assisting in project execution. Recently I’ve become one of the head undergraduate TAs for projects and will be the main project TA next year. This will involve developing software for Raspberry Pi robots, organizing logistics to provide help to students, and designing project challenges.</p>
+						<p>I’m a teaching assistant for Purdue Honors Engineering. Responsibilities have included helping in class, grading and mentoring teams, and assisting in project execution. I am the co-head project undergraduate TA. This responsibility involves developing software for Raspberry Pi robots, organizing logistics to provide help to students, and designing project challenges.</p>
           </div>
+        </div>
+        <div class = "column">
           <div class = "card">
             <h4>Class Projects</h4>
 						
@@ -44,41 +46,6 @@
 							<li>Audio equalizer - Circuit analysis</li>
 							<li>Food transport device - Sophomore design</li>
 							<li>Fluid statics computational model - Fluid dynamics honors contract</li>
-						</ul>
-          </div>
-        </div>
-        <div class = "column">
-          <div class = "card">
-            Here's a list of classes I've completed!
-						<ul>
-							<li>General Chemistry</li>
-							<li>Collaborative Leadership: Interpersonal Skills</li>
-							<li>Honors Intro To Phys & Engr I</li>
-							<li>The Evolution Of Ideas</li>
-							<li>Multivariate Calculus</li>
-							<li>Graphical Comm & Spatial Anly</li>
-							<li>C Programming</li>
-							<li>Macroeconomics</li>
-							<li>Honors Intro To Phys & Engr II</li>
-							<li>The Evolution Of Ideas II</li>
-							<li>Linear Algebra</li>
-							<li>Prob Solving & O-O Programming</li>
-							<li>Ordinary Differ Equatn</li>
-							<li>Thermodynamics I</li>
-							<li>Basic Mechanics I</li>
-							<li>Global Engr Prof Sem</li>
-							<li>E&M Interactions</li>
-							<li>Electrical Engr Fundamentals I</li>
-							<li>Elec Engr Fundamentals I Lab</li>
-							<li>Diff Equa Inc Systems</li>
-							<li>ME Design, Innov & Entrep</li>
-							<li>Basic Mechanics II</li>
-							<li>Berlin: Monumental Unrest</li>
-							<li>Foundations Of Comp Sc</li>
-							<li>Leadership: Cross-Cultural</li>
-							<li>Fluid Mechanics-Honors</li>
-							<li>Mechanics Of Material</li>
-							<li>Measure Control Systems I</li>
 						</ul>
           </div>
         </div>    
