--- a/acad.html
+++ b/acad.html
@@ -52,7 +52,7 @@
     </div>
 
 
-    <div class = "footer">Copyright 2023, Owen Johnson. <a href="https://www.linkedin.com/in/owen-hl-johnson/">LinkedIn</a></div>
+    <div class = "footer">Copyright <script>document.write(new Date().getFullYear())</script>, Owen Johnson. <a href="https://www.linkedin.com/in/owen-hl-johnson/">LinkedIn</a></div>
 
   </body>
 </html>
