--- a/acad.html
+++ b/acad.html
@@ -27,11 +27,12 @@
 						<p>Certificate: Collaborative Leadership</p>
 						<p>GPA: 3.70</p>
 						<p>Study abroad: Berlin (Summer 2022)</p>
+						<p>Graduated: May 2024</p>
 					</div>
           <div class = "card">
             <h4>TA Experience:</h4>
 						
-						<p>I’m a teaching assistant for Purdue Honors Engineering. Responsibilities have included helping in class, grading and mentoring teams, and assisting in project execution. I am the co-head project undergraduate TA. This responsibility involves developing software for Raspberry Pi robots, organizing logistics to provide help to students, and designing project challenges.</p>
+						<p>I was a teaching assistant for three years with Purdue Honors Engineering. Responsibilities included helping in class, grading and mentoring teams, and assisting in project execution. I was the co-head project undergraduate TA in my final year. This responsibility involved developing software for Raspberry Pi robots, organizing logistics to provide help to students, and designing project challenges.</p>
           </div>
         </div>
         <div class = "column">
@@ -46,6 +47,9 @@
 							<li>Audio equalizer - Circuit analysis</li>
 							<li>Food transport device - Sophomore design</li>
 							<li>Fluid statics computational model - Fluid dynamics honors contract</li>
+							<li>Asymmetric-length fin manufacture and testing - Heat and mass transfer</li>
+							<li>Bad Art: discussing failure in letterpress printing through photography - Honors project</li>
+							<li>Semi-autonomous hydroponic grow modules - Senior Design</li>
 						</ul>
           </div>
         </div>    
