--- a/projects/ir.html
+++ b/projects/ir.html
@@ -38,7 +38,7 @@
     </div>
 
 
-    <div class = "footer">Copyright 2023, Owen Johnson.</div>
+    <div class = "footer">Copyright <script>document.write(new Date().getFullYear())</script>, Owen Johnson.</div>
 
   </body>
 </html>
