--- a/projects/sat.html
+++ b/projects/sat.html
@@ -30,7 +30,7 @@
     </div>
 
 
-    <div class = "footer">Copyright 2023, Owen Johnson.</div>
+    <div class = "footer">Copyright <script>document.write(new Date().getFullYear())</script>, Owen Johnson.</div>
 
   </body>
 </html>
